--- a/assets/sass/partials/_layout.scss
+++ b/assets/sass/partials/_layout.scss
@@ -1,12 +1,13 @@
 
 ::selection {
-	background-color:white;
+	background-color:$white;
 	color:  $red;
 }
 
 html {
     height:100%;
     scroll-behavior: smooth;
+    background: $white;
 }
 
 body {
@@ -14,29 +15,13 @@ body {
     font-size:16px;
     font-weight:400;
     line-height:1.5;
-    background-color: $bg-dark;
-    color:white;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow:hidden;
     min-height:100%;
     scroll-behavior: smooth;
 
-    &.content-loaded {
-        height:auto;
-        overflow: auto;
-    }
-	
-    @media (min-width:400px) {
-        font-size:18px;
-    }
-
-    @media (min-width:768px) {
-        font-size:20px;
-    }
-
-    @media (min-width:1366px) {
-        font-size:22px;
+    * {
+        box-sizing: border-box;
     }
 }
 
@@ -46,6 +31,43 @@ body {
     margin:0 auto;
 
     @media screen and (min-width:1920px) {
-        box-shadow: 2px 2px 5px #010101;
+        box-shadow: 0 0 20px -10px #010101;
+    }
+}
+
+.site-main {
+    margin-top:$su*3;
+
+    @media screen and (min-width:400px) {
+        margin-top:$su*4;
+    }
+
+    @media screen and (min-width:560px) {
+        margin-top:$su*7;
+    }
+
+    @media screen and (min-width:1024px) {
+        margin-top:700px;
+    }
+}
+
+section {
+    min-height: 50vh;
+}
+
+.cols-2 {
+    display:flex;
+    flex-direction: column;
+    
+    @media screen and (min-width:1024px) {
+        flex-direction: row;
+    }
+}
+
+.cols-2__col {
+    width:100%;
+
+    @media screen and (min-width:1024px) {
+        width: 50%;
     }
 }
