--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,54 +1,29 @@
-<header class="site-header">
-	{{ if .IsHome }}
-		<div class="site-header__group">
-			<div class="loader-wrapper">
-				<div class="loader"></div> 
-			</div>
-			<img class="site-header__bg" src="{{.Site.BaseURL}}assets/img/darwin-loriginal-intro-bg.svg" alt="">
-			<a id="site-header__link-intro" class="scroll" href="{{.Site.BaseURL}}#site-header__organisation" title="Voir le contenu">
-				<picture>
-					<source type="image/webp" srcset="/assets/img/darwin-homme-intro.webp">
-					<source type="image/png" srcset="/assets/img/darwin-homme-intro.png">
-					<img class="site-header__homme-img" src="{{.Site.BaseURL}}assets/img/darwin-homme-intro.png" alt="" sizes="100vw">
-				</picture>
-				<picture>
-					<source type="image/webp" srcset="/assets/img/darwin-txt-intro.webp">
-					<source type="image/png" srcset="/assets/img/darwin-txt-intro.png">
-					<img class="site-header__txt-img" src="{{.Site.BaseURL}}assets/img/darwin-txt-intro.png" alt="" sizes="100vw">
-				</picture>
-			</a>
-		</div>
-	
-		<div class="site-header__copy-block" id="site-header__organisation">
-			<p>Une exposition réalisée par <strong>La Cité&nbsp;des&nbsp;sciences et de&nbsp;l’industrie - Paris</strong><br>en collaboration avec le <strong>Muséum&nbsp;national d’Histoire&nbsp;naturelle</strong></p>
-			<div class="site-header__copy-block__logos">
-				<a href="http://www.cite-sciences.fr">
-					<img src="{{.Site.BaseURL}}assets/img/logo-cite-sciences-industries.png" alt="logo Cité des sciences et de l'industrie">
-				</a>
-				<a href="https://www.mnhn.fr/">
-					<img src="{{.Site.BaseURL}}assets/img/logo-museum-national-histoire-naturelle.png" alt="logo Muséum national d'Histoire naturelle ">
-				</a>
-			</div>
-		</div>
-	{{ end }}
+<header id="section-hero" class="cols-2">
+
+    <div class="cols-2__col">
+        <div id="scene">
+        <div class="cube cube show-top" id="cube">
+            <div class="cube__face cube__face--front"><img src="/assets/img/resiste-boite-front.jpg" alt=""></div>
+            <div class="cube__face cube__face--back"><img src="/assets/img/resiste-boite-back.jpg" alt=""></div>
+            <div class="cube__face cube__face--right"><img src="/assets/img/resiste-boite-right.jpg" alt=""></div>
+            <div class="cube__face cube__face--left"><img src="/assets/img/resiste-boite-left.jpg" alt=""></div>
+            <div class="cube__face cube__face--top"><img src="/assets/img/resiste-boite-top.jpg" alt=""></div>
+            <div class="cube__face cube__face--bottom"><img src="/assets/img/resiste-boite-bottom.png" alt=""></div>
+        </div>
+        </div>
+    </div>
+
+    <div class="cols-2__col">
+        <h1 class="site-logo">
+            <img src="/assets/img/resiste-logo.png" alt="Résiste !">
+        </h1>
+        <div class="site-description">
+            <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, il faut relever des épreuves et rassembler les quatre pièces d’un puzzle. Une fois celui-ci complété, la mise à jour peut être lancée et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde ! Technomania tente lui aussi d’installer un virus pour empêcher les joueurs d’agir. Il vous faudra donc réussir avant le chargement complet de ce virus !</p>
+            <div class="buttons">
+                <a href="#">Acheter le jeu</a>
+                <a href="#">Télécharger le guide pédagogique</a>
+            </div>
+        </div>
+    </div>
+
 </header>
-<div class="site-nav-wrapper">
-	<nav class="site-nav">
-		<input id="site-nav__control" class="hide" type="checkbox">
-		<label for="site-nav__control" class="site-nav__control-label">Menu</label>
-		<ul class="site-nav__list">
-			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--internal scroll" href="{{.Site.BaseURL}}#intro">Intro</a>
-			</li>
-			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--internal scroll" href="{{.Site.BaseURL}}#en-pratique">En pratique</a>
-			</li>
-			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--internal scroll" href="{{.Site.BaseURL}}#animations">Animations</a>
-			</li>
-			<li class="site-nav__item">
-				<a class="site-nav__link" href="{{.Site.BaseURL}}activites-annexes">Activités annexes</a>
-			</li>
-		</ul>
-	</nav>
-</div>
