--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,7 +1,6 @@
-{{ $contentLoaded := resources.Get "js/content-loaded.js" }}
-{{ $ieDetection := resources.Get "js/ie-detection.js" }}
-{{ $navUnfocus := resources.Get "js/nav-unfocus.js" }}
-{{ $defaultJS := slice $contentLoaded $ieDetection $navUnfocus | resources.Concat "js/global.js" }}
+{{ $jquery := resources.Get "js/jquery.js" }}
+{{ $box := resources.Get "js/box.js" }}
+{{ $about := resources.Get "js/about.js" }}
+{{ $defaultJS := slice $box $about | resources.Concat "js/global.js" }}
 {{ $globalJS := $defaultJS | resources.Fingerprint }}
-<script>document.querySelector('body').classList.remove('no-js');</script>
 <script src="{{ $globalJS.Permalink }}"></script>
