--- a/layouts/partials/section-about.html
+++ b/layouts/partials/section-about.html
@@ -1,7 +1,6 @@
-<section id="section-about" class="observed">
+<section id="section-about" class="observed" aria-label="Histoire">
     <div class="cols-2">
         <div class="cols-2__col">
-            <h2>Histoire</h2>
             <p>Le parti autoritaire Technomania est arrivé au pouvoir dans le monde des bics et des crayons. Grâce à un ordinateur central qu’il a sous son emprise, Technomania fait régner la peur et impose des règles injustes à la population des bics et des crayons; celles et ceux qui ont voulu s’opposer à ce parti ont été arrêtés et emprisonnés. Ensemble, les joueurs et les joueuses doivent se montrer solidaires pour lutter contre Technomania et réinstaurer la démocratie&nbsp;!</p>
         </div>
         <div class="cols-2__col">
