--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -23,5 +23,6 @@ $mw: 1280px; // max-width
 @import 'partials/_typo';
 @import 'partials/_hero';
 @import 'partials/_about';
+@import 'partials/_technical';
 @import 'partials/_footer';
 @import 'partials/_modules';
