--- a/assets/sass/partials/_about.scss
+++ b/assets/sass/partials/_about.scss
@@ -1,10 +1,13 @@
 #section-about {
-    background: white url("../assets/img/resiste-frise-persos.jpg") no-repeat center bottom;
-    border-bottom: 5px dashed $bleu-tm;
+    background: white url("../assets/img/resiste-frise-persos-small.jpg") no-repeat center bottom;
+    background-size: contain;
+    border-bottom: 1px solid $bleu-tm;
+    padding:$su*5 0 140px;
 
     @media screen and (min-width: 1024px) {
-        padding:$su*4 0 400px;
+        background-image:url("../assets/img/resiste-frise-persos.jpg");
         background-position: 0 200%;
+        padding:$su*5 0 400px;
         transition:background-position 400ms ease-in-out;
 
         &.is-visible {
@@ -15,13 +18,41 @@
     .cols-2 {
         max-width: $mw;
         margin:0 auto;
+
+        @media screen and (min-width:560px) {
+            margin:$su*2 auto;
+        }
+
+        @media screen and (min-width:768px) {
+            margin:$su*4 auto;
+        }
+
+        @media screen and (min-width:1024px) {
+            margin:0 auto;
+        }
     }
 
     .cols-2__col {
-        padding:0 $su*2;
+        padding:0 $su;
     }
 
     p {
+        margin: 0 auto $su*2;
         max-width: 560px;
+        
+        @media screen and (min-width: 1024px) {
+            font-size: 1.25rem;
+            text-align: justify;
+            hyphens: auto;
+        }
+    }
+
+    iframe {
+        border:5px dashed $bleu-tm;
+        transition: border-color 100ms ease-out;
+
+        &:hover, &:focus {
+            border-color:$red;
+        }
     }
 }
