--- a/assets/sass/partials/_layout.scss
+++ b/assets/sass/partials/_layout.scss
@@ -1,17 +1,17 @@
 
 ::selection {
-	background-color:$white;
-	color:  $red;
+	background-color:$red;
+	color: white;
 }
 
 html {
     height:100%;
     scroll-behavior: smooth;
-    background: $white;
 }
 
 body {
     @include ff-r; 
+    background:white;
     font-size:16px;
     font-weight:400;
     line-height:1.5;
@@ -29,6 +29,7 @@ body {
     width:100%;
     max-width:1920px;
     margin:0 auto;
+    overflow-x:hidden;
 
     @media screen and (min-width:1920px) {
         box-shadow: 0 0 20px -10px #010101;
@@ -36,18 +37,10 @@ body {
 }
 
 .site-main {
-    margin-top:$su*3;
-
-    @media screen and (min-width:400px) {
-        margin-top:$su*4;
-    }
-
-    @media screen and (min-width:560px) {
-        margin-top:$su*7;
-    }
+    margin-top:0;
 
     @media screen and (min-width:1024px) {
-        margin-top:700px;
+        margin-top:436px;
     }
 }
 
@@ -58,6 +51,7 @@ section {
 .cols-2 {
     display:flex;
     flex-direction: column;
+    align-items:center;
     
     @media screen and (min-width:1024px) {
         flex-direction: row;
@@ -65,7 +59,7 @@ section {
 }
 
 .cols-2__col {
-    width:100%;
+    width:auto;
 
     @media screen and (min-width:1024px) {
         width: 50%;
