--- a/layouts/partials/section-technical.html
+++ b/layouts/partials/section-technical.html
@@ -1,13 +1,21 @@
-<section id="section-technical" class="cols-2">
+<section id="section-technical" class="cols-2" aria-label="Éléments du jeu">
     <div class="cols-2__col">
 
     </div>
     <div class="cols-2__col">
-        <h2>Elements du jeu</h2>
-        <ul>
-            <li>Nombre de joueurs : de 4 à 16</li>
-            <li>Âge : 9-13 ans</li>
-            <li>Durée : 60’-90’</li>
+        <ul class="specs">
+            <li>
+                <svg viewBox="0 0 90 90"><use xlink:href="#icone-joueurs--blanc"></use></svg>
+                <span>4 à 16 joueurs</span>
+            </li>
+            <li>
+                <svg viewBox="0 0 90 90"><use xlink:href="#icone-age--blanc"></use></svg>
+                <span>9 - 13 ans</span>
+            </li>
+            <li>
+                <svg viewBox="0 0 90 90"><use xlink:href="#icone-duree--blanc"></use></svg>
+                <span>60’ - 90’</span>
+            </li>
         </ul>
     </div>
 </section>
