add card anim + infos section

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -22,6 +22,7 @@ $mw: 1280px; // max-width
 @import 'partials/_layout';
 @import 'partials/_typo';
 @import 'partials/_hero';
+@import 'partials/_description';
 @import 'partials/_about';
 @import 'partials/_technical';
 @import 'partials/_footer';
