--- a/layouts/partials/section-about.html
+++ b/layouts/partials/section-about.html
@@ -1,9 +1,9 @@
-<section id="section-about" class="observed" aria-label="Histoire">
+<section id="section-about" class="cols-2 observed" aria-label="Histoire">
     <div class="cols-2">
-        <div class="cols-2__col">
+        <div class="cols-2__col section-about__text">
             <p>Le parti autoritaire Technomania est arrivé au pouvoir dans le monde des bics et des crayons. Grâce à un ordinateur central qu’il a sous son emprise, Technomania fait régner la peur et impose des règles injustes à la population des bics et des crayons; celles et ceux qui ont voulu s’opposer à ce parti ont été arrêtés et emprisonnés. Ensemble, les joueurs et les joueuses doivent se montrer solidaires pour lutter contre Technomania et réinstaurer la démocratie&nbsp;!</p>
         </div>
-        <div class="cols-2__col">
+        <div class="cols-2__col section-about__video">
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XT8K7vgxrpo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
