--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -5,8 +5,7 @@
 </div>
 
 <header id="section-hero" class="cols-2">
-
-    <div class="cols-2__col">
+    <div class="cols-2__col section-hero__box">
         <div id="scene">
             <div class="cube cube show-top" id="cube">
                 <div class="cube__face cube__face--front"><img src="/assets/img/resiste-boite-front.jpg" alt=""></div>
@@ -18,19 +17,15 @@
             </div>
         </div>
     </div>
-
     <div class="cols-2__col">
         <h1 class="site-logo">
-            <img src="/assets/img/resiste-logo.png" alt="Résiste !">
-            <img src="/assets/img/resiste-baseline.png" alt="Le jeu coopératif pour résister ensemble et défendre la démocratie !">
+            <a href="/">
+                <img class="site-logo__resiste" src="/assets/img/resiste-logo.png" alt="Résiste !">
+            </a>
+            <picture>
+                <source srcset="/assets/img/resiste-baseline.png" media="(min-width: 1024px)">
+                <img class="site-logo__baseline" src="/assets/img/resiste-baseline-noir.png" alt="Le jeu coopératif pour résister ensemble et défendre la démocratie !">
+            </picture>
         </h1>
-        <div class="site-description">
-            <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, il faut relever des épreuves et rassembler les quatre pièces d’un puzzle. Une fois celui-ci complété, la mise à jour peut être lancée et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde ! Technomania tente lui aussi d’installer un virus pour empêcher les joueurs d’agir. Il vous faudra donc réussir avant le chargement complet de ce virus !</p>
-            <div class="buttons">
-                <a href="#">Acheter le jeu</a>
-                <a href="#">Télécharger&nbsp;le guide&nbsp;pédagogique</a>
-            </div>
-        </div>
     </div>
-
 </header>
