--- a/assets/sass/partials/_about.scss
+++ b/assets/sass/partials/_about.scss
@@ -1,44 +1,64 @@
 #section-about {
-    background: white url("../assets/img/resiste-frise-persos-small.jpg") no-repeat center bottom;
-    background-size: contain;
-    border-bottom: 1px solid $bleu-tm;
-    padding:$su*5 0 140px;
+    padding:$su*4 $su/2;
+    background-image:url("../assets/img/resiste-tache-01.png"), url("../assets/img/resiste-tache-02.png"),  $bleu-gradient;
+    background-position:-100px -100px, calc(100% + 100px) calc(100% + 100px),left top;
+    background-repeat:no-repeat;
+    color:white;
+    transition:background-position 200ms ease-out;
 
     @media screen and (min-width: 1024px) {
-        background-image:url("../assets/img/resiste-frise-persos.jpg");
-        background-position: 0 200%;
-        padding:$su*5 0 400px;
-        transition:background-position 400ms ease-in-out;
-
+        padding:$su*4 $su;
+        
         &.is-visible {
-            background-position: 0 100%;
+            background-image:url("../assets/img/resiste-tache-01.png"), url("../assets/img/resiste-tache-02.png"),  $bleu-gradient;
+            background-position:5px 5px,calc(100% - 5px) calc(100% - 5px),left top;
         }
     }
 
     .cols-2 {
-        max-width: $mw;
-        margin:0 auto;
-
-        @media screen and (min-width:560px) {
-            margin:$su*2 auto;
-        }
-
-        @media screen and (min-width:768px) {
-            margin:$su*4 auto;
-        }
-
-        @media screen and (min-width:1024px) {
+        
+        @media screen and (min-width: 1024px) {
+            align-items:flex-start;
             margin:0 auto;
+
+            &:first-of-type {
+                width: 100%;
+                max-width: $mw;
+            }
         }
     }
 
     .cols-2__col {
-        padding:0 $su;
+        max-width: 640px;
+        width:100%;
+
+        &.section-about__text {
+            padding:0 $su/2;
+            order:2;
+            margin-top:$su;
+        }
+
+        &.section-about__video {
+            padding:0 $su/2;
+        }
+
+        @media screen and (min-width:1024px) {
+            
+            &.section-about__text {
+                margin-top:0;
+                margin-right:$su*2;
+                padding:0;
+                order:0;
+            }
+            
+            &.section-about__video {
+                padding:$su/2 0 0 $su/4;
+            }
+        }
     }
 
     p {
-        margin: 0 auto $su*2;
-        max-width: 560px;
+        margin: 0;
         
         @media screen and (min-width: 1024px) {
             font-size: 1.25rem;
@@ -48,7 +68,8 @@
     }
 
     iframe {
-        border:5px dashed $bleu-tm;
+        width:100%;
+        border:5px dashed white;
         transition: border-color 100ms ease-out;
 
         &:hover, &:focus {
