--- a/assets/sass/partials/_footer.scss
+++ b/assets/sass/partials/_footer.scss
@@ -2,3 +2,14 @@
 * FOOTER
 */
 
+.site-footer {
+    background:$bleu-gradient;
+    padding:0.5rem;
+
+    p {
+        text-align: center;
+        font-size:0.9rem;
+        color:white;
+        margin:0;
+    }
+}
