--- a/assets/sass/partials/_hero.scss
+++ b/assets/sass/partials/_hero.scss
@@ -42,45 +42,81 @@
 #section-hero {
     position:relative;
     align-items: center;
-    padding-top:$su;
+    margin-top:$su;
     
     @media screen and (min-width:1024px) {
+        display:flex;
+        flex-wrap: wrap;
         align-items: flex-start;
         justify-content: center;
-        padding-top:$su*2;
-    }
-
-    &:after {
-        content:'';
-        display:block;
-        width:100%;
-        bottom:0;
-        height:200px;
-        position: absolute;
-        z-index: -1;
-        background: $bleu-medium;
+        margin-top:$su;
+        padding-bottom:$su*2;
         background: $bleu-gradient;
-        
-        @media screen and (min-width:1024px) {
-            display:none;
-        }
+        background-size: 100% 280px;
+        background-repeat: no-repeat;
+        background-position: 0 368px;
     }
 
     .cols-2__col {
         padding:0 $su;
         max-width: 640px;
+    }
+
+    .section-hero__box {
+        order:2;
+        background: $bleu-gradient;
+        background-repeat: no-repeat;
+        background-size: 100% 120px;
+        background-position: 0 120px;
         
-        &:first-of-type {
-            order: 2;
+        @media screen and (min-width:400px) {
+            background-size: 100% 120px;
+            background-position: 0 160px;
+        }
+    
+        @media screen and (min-width:640px) and (max-width:1023px) {
+            max-width: 100%;
+            width:100%;
+            background-size: 100% 160px;
+            background-position: 0 220px;
         }
     
         @media screen and (min-width:1024px) {
-    
-            &:first-of-type {
-                order: 0;
-            }
+            order:0;
+            background: none;
         }
     }
+}
+
+.site-logo {
+    text-align: center;
+    margin:28vw 0 0;
+
+    img {
+        margin:0 auto;
+        max-width: 90%;
+    }
+
+    .site-logo__resiste {
+        margin-bottom:$su*2;
+    }
+
+    @media screen and (min-width:480px) {
+        margin:20vw 0 0;
+    }
+
+    @media screen and (min-width:768px) {
+        margin:$su 0 0;
+        
+        img {
+            max-width: 100%;
+        }
+    }
+
+    @media screen and (min-width:1024px) {
+        text-align: left;
+    }
+    
 }
 
 #scene {
@@ -104,6 +140,10 @@
     @media screen and (min-width:560px) {
         transform: scale(0.5);
         margin-top:100px;
+    }
+
+    @media screen and (min-width:640px) {
+        margin:100px auto 0 auto;
     }
     
     @media screen and (min-width:768px) {
@@ -146,119 +186,3 @@
 .cube.show-left   { transform: rotate3d(-1, 10 ,-1 , 75deg); }
 .cube.show-right  { transform: rotate3d(2, 20, -1, 260deg); }
 .cube.show-top    { transform: rotate3d( 10, 2, 2, -70deg ); }
-
-.site-logo {
-    text-align: center;
-    margin-top:28vw;
-
-    @media screen and (min-width:480px) {
-        margin-top:20vw;
-    }
-
-    @media screen and (min-width:768px) {
-        margin-top:$su;
-    }
-
-    @media screen and (min-width:1024px) {
-        text-align: left;
-    }
-    
-    img {
-        max-width: 80%;
-        margin:0 auto $su auto;
-    }
-
-    @media screen and (min-width:1280px) {
-
-        img {
-            padding-left:$su;
-        }
-    }
-}
-
-.site-description {
-    
-    @media screen and (min-width:1024px) {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto;
-        position: absolute;
-        left: 0;
-        right: 0;
-        width: 100%;
-        background:$bleu-gradient;
-        color:white;
-    }
-
-    @media screen and (min-width:1280px) {
-        grid-template-columns: 1fr 640px 640px 1fr;
-    }
-    
-    p {
-        margin: 0 auto;
-        max-width: 37em;
-        
-        @media screen and (min-width:1024px) {
-            grid-column: 2 / 3;
-            padding: $su*2 $su 0 $su;
-        }
-
-        @media screen and (min-width:1280px) {
-            grid-column: 3 / 4;
-        }
-    }
-
-    .buttons {
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        margin: $su*2 0;
-
-        @media screen and (min-width:1024px) {
-            grid-column: 1 / -1;
-            grid-row-start: 2;
-            margin: $su*3 auto $su*3 auto;
-            flex-direction: row;
-            
-            a:first-of-type {
-                grid-column-start: 3;
-            }
-        }
-
-        a {
-            @include ff-b;
-            font-size:1.2rem;
-            color:$bleu-tm;
-            text-decoration: none;
-            text-transform: uppercase;
-            text-align: center;
-            border: 3px dashed currentColor;
-            margin:$su;
-            padding: 0.5em;
-            box-shadow: 0 0 1.2em -0.1em;
-            transform:translateY(0);
-            transition: box-shadow 150ms ease-out, transform 150ms ease-out;
-
-            &:hover, &:focus {
-                box-shadow: 0 0 1.8em -0.1em;
-                transform:translateY(-4px);
-            }
-
-            &:active {
-                box-shadow: 0 0 0.6em -0.1em;
-                transform:translateY(0);
-            }
-
-            @media screen and (min-width:560px) {
-                font-size: 1.4rem;
-            }
-
-            @media screen and (min-width:1024px) {
-                color:white;
-                font-size: 1.8rem;
-                margin:$su $su*2;
-            }
-        }
-    }
-}
