--- a/assets/sass/partials/_technical.scss
+++ b/assets/sass/partials/_technical.scss
@@ -1,14 +1,92 @@
-#section-technical {
-    background:$bleu-gradient;
-    color:white;
-    padding: $su*4 $su;
+#section-infos {
+    color:$bleu-tm;
+    background: white url("../assets/img/resiste-frise-persos-small.jpg") no-repeat center bottom;
+    background-size: contain;
+    padding:$su*3 $su 140px;
+    max-width: $mw;
+
+    @media screen and (min-width: 560px) {
+        padding:$su*3 $su*2 220px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        background-image:url("../assets/img/resiste-frise-persos.jpg");
+        background-position: 0 200%;
+        padding:$su*3 $su*2 300px;
+        margin:0 auto;
+        transition:background-position 400ms ease-in-out;
+        align-items: flex-start;
+
+        &.is-visible {
+            background-position: 0 100%;
+        }
+    }
 }
 
-.specs {
+.icon-list {
+    padding:0;
+    margin:0;
+
+    @media screen and (min-width:1024px) {
+        display:flex;
+        width:100%;
+        justify-content:space-around;
+    }
+
+    #section-infos & {
+        display:flex;
+        flex-wrap:wrap;
+        flex-direction:row;
+    
+        li {
+            width:100%;
+    
+            @media screen and (min-width:560px) {
+                width:50%;
+            }
+    
+            @media screen and (min-width:1024px) {
+                width:25%;
+            }
+        }
+    }
+
+    #get-the-game & {
+    
+        li {
+            width:100%;
+    
+            @media screen and (min-width:768px) {
+                width:50%;
+            }
+    
+            @media screen and (min-width:1024px) {
+                width:33.3%;
+            }
+
+            &.icon-list__long-text {
+                padding-right: 0.5em;
+                
+                @media screen and (min-width:768px) {
+                    width:100%;
+                }
+        
+                @media screen and (min-width:1024px) {
+                    width:33.333%;
+                }
+
+                span {
+                    max-width: 18em;
+                }
+            }
+        }
+    }
+
 
     li {
         display:flex;
         align-items:center;
+        margin:$su/2 0;
 
         &:hover, &:focus {
             
@@ -19,13 +97,70 @@
     }
 
     svg {
-        height:7.5em;
-        width:7.5em;
+        height:4em;
+        min-width:4em;
         margin-right:0.75em;
+        transition: transform 100ms ease-out;
+
+        @media screen and (min-width:400px) {
+            height:5em;
+            min-width:5em;
+        }
+
+        @media screen and (min-width:768px) {
+            height:6em;
+            min-width:6em;
+        }
+
+        @media screen and (min-width:1024px) {
+            height:7em;
+            min-width:7em;
+        }
     }
 
     span {
         display:block;
-        font-size:1.4rem;
+        width:100%;
+    }
+
+    span, a {
+        font-size:1.2rem;
+        line-height:1.25;
+
+        @media screen and (min-width:768px) {
+            font-size:1.4rem;
+        }
+
+        @media screen and (min-width:1024px) {
+            font-size:1.2rem;
+        }
+    }
+
+    small a {
+        font-size:100%;
+    }
+
+    a {
+        color:$red;
+        text-decoration-style:dashed;
+        
+        &:hover, &:focus {
+            text-decoration:none;
+        }
+    }
+}
+
+#get-the-game {
+    border: 5px dashed $bleu-tm;
+    margin-top: $su*3;
+    padding: $su/2;
+
+    @media screen and (min-width:1024px) {
+        padding:$su;
+    }
+
+    h2 {
+        text-align: center;
+        margin: $su/2 0 $su;
     }
 }
