--- a/assets/sass/partials/_typo.scss
+++ b/assets/sass/partials/_typo.scss
@@ -5,19 +5,13 @@ h1, h2, h3, h4 {
     text-transform: uppercase;
 }
 
-h1 {
-    
-}
-
 h2 {
     font-size: 2.6rem;
     margin-top:0;
 }
 
-h3 {
-    
+p {
+    max-width: 30em;
 }
 
-h4 {
-    
-}
+
