changes after reunion

--- a/assets/sass/partials/_description.scss
+++ b/assets/sass/partials/_description.scss
@@ -16,7 +16,6 @@
 
     p {
         margin: 0 auto;
-        max-width: 37em;
         
         @media screen and (min-width:1024px) {
             font-size: 1.25rem;
@@ -160,6 +159,7 @@
     position:absolute;
     transform:translateX(120vw);
     transition:all 800ms ease-out;
+    left:120vw;
 
     &.card--01 {
         z-index:4;
@@ -191,7 +191,10 @@
 }
 
 .cards.is-visible {
-
+    
+    .card {
+        left:0;
+    }
     .card.card--01 {
         transform:translateX(0);
     }
@@ -251,5 +254,22 @@ $cards: card--01 card--02 card--03 card--04 card--05 card--06;
     $i: index($cards, $card);
     .#{$card} { 
         transition-delay: $i * $delay;
+    }
+}
+
+.section-description__icons.icon-list {
+    max-width: $mw;
+    margin:$su*2 auto;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    li {
+        width:100%;
+        max-width:calc(25% - #{$su * 2});
+        min-width: 240px;
+        margin:$su;
+        justify-content: center;
     }
 }
