--- a/assets/sass/partials/_technical.scss
+++ b/assets/sass/partials/_technical.scss
@@ -152,7 +152,7 @@
 
 #get-the-game {
     border: 5px dashed $bleu-tm;
-    margin-top: $su*3;
+    margin-top: $su;
     padding: $su/2;
 
     @media screen and (min-width:1024px) {
