--- a/layouts/partials/page-snippets.html
+++ b/layouts/partials/page-snippets.html
@@ -17,6 +17,6 @@
   "startDate": "2019-10-12T10:00",
   "endDate": "2020-02-02T18:00",
   "url": "{{ .Site.BaseURL | safeJS }}",
-  "image": "{{ .Site.BaseURL | safeJS }}assets/img/expo-darwin-l-original-social.jpg"
+  //"image": "{{ .Site.BaseURL | safeJS }}assets/img/expo-darwin-l-original-social.jpg"
 }
 </script>
