--- a/layouts/partials/section-description.html
+++ b/layouts/partials/section-description.html
@@ -36,4 +36,22 @@
             <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, il faut relever des épreuves et rassembler les quatre pièces d’un puzzle. Une fois celui-ci complété, la mise à jour peut être lancée et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde ! Technomania tente lui aussi d’installer un virus pour empêcher les joueurs d’agir. Il vous faudra donc réussir avant le chargement complet de ce virus&nbsp;!</p>
         </div>
     </div>
+    <ul class="section-description__icons icon-list">
+        <li>
+            <svg viewBox="0 0 90 90"><use xlink:href="#icone-joueurs"></use><title>Nombre de joueurs</title></svg>
+            <span>4 à 16 joueurs</span>
+        </li>
+        <li>
+            <svg viewBox="0 0 90 90"><use xlink:href="#icone-age"></use><title>Age</title></svg>
+            <span>9 - 13 ans</span>
+        </li>
+        <li>
+            <svg viewBox="0 0 90 90"><use xlink:href="#icone-duree"></use><title>Durée</title></svg>
+            <span>60’ - 90’</span>
+        </li>
+        <li>
+            <svg viewBox="0 0 90 90"><use xlink:href="#icone-prix"></use><title>Prix</title></svg>
+            <span>30 €</span>
+        </li>
+    </ul>
 </div>
