edit site description

--- a/layouts/partials/section-description.html
+++ b/layouts/partials/section-description.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="cols-2__col">
-            <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, il faut relever des épreuves et rassembler les quatre pièces d’un puzzle. Une fois celui-ci complété, la mise à jour peut être lancée et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde ! Technomania tente lui aussi d’installer un virus pour empêcher les joueurs d’agir. Il vous faudra donc réussir avant le chargement complet de ce virus&nbsp;!</p>
+            <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, relevez des épreuves et rassemblez les 4 pièces d’un puzzle. Une fois le puzzle complété, vous pourrez lancer la mise à jour et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde… Technomania tente lui aussi d’installer un virus pour vous empêcher d’agir. Il vous faudra donc réussir votre mission avant le chargement complet de ce virus&nbsp;!</p>
         </div>
     </div>
     <ul class="section-description__icons icon-list">
