--- a/layouts/partials/section-infos.html
+++ b/layouts/partials/section-infos.html
@@ -4,7 +4,7 @@
         <ul class="icon-list">
             <li>
                 <svg viewBox="0 0 90 90"><use xlink:href="#icone-boutique"></use><title>Boutique en ligne</title></svg>
-                <span><a href="https://boutique.territoires-memoire.be">Acheter en ligne</a></span>
+                <span><a href="https://boutique.territoires-memoire.be/fr/outils-pedagogiques/57-resiste-.html" target="_blank" rel="noopener">Acheter en ligne</a></span>
             </li>
             <li>
                 <svg viewBox="0 0 90 90"><use xlink:href="#icone-contact"></use><title>Contact</title></svg>
