--- a/layouts/partials/section-about.html
+++ b/layouts/partials/section-about.html
@@ -1,10 +1,37 @@
-<section id="section-about" class="cols-2 observed" aria-label="Histoire">
-    <div class="cols-2">
-        <div class="cols-2__col section-about__text">
-            <p>Le parti autoritaire Technomania est arrivé au pouvoir dans le monde des bics et des crayons. Grâce à un ordinateur central qu’il a sous son emprise, Technomania fait régner la peur et impose des règles injustes à la population des bics et des crayons; celles et ceux qui ont voulu s’opposer à ce parti ont été arrêtés et emprisonnés. Ensemble, les joueurs et les joueuses doivent se montrer solidaires pour lutter contre Technomania et réinstaurer la démocratie&nbsp;!</p>
+<section id="section-about" class="home-section observed">
+    <h2 class="hide">À propos</h2>
+    <div class="cols-2 section-about__cols">
+        <div class="cols-2__col">
+            <div class="cards observed">
+                <picture class="card card--01">
+                    <source srcset="/assets/img/resiste-carte-01.png" media="(min-width: 768px)">
+                    <img class="site-logo__baseline" src="/assets/img/resiste-carte-01-small.png" alt="">
+                </picture>
+                <picture class="card card--02">
+                    <source srcset="/assets/img/resiste-carte-02.png" media="(min-width: 768px)">
+                    <img class="site-logo__baseline" src="/assets/img/resiste-carte-02-small.png" alt="">
+                </picture>
+                <picture class="card card--03">
+                    <source srcset="/assets/img/resiste-carte-03.png" media="(min-width: 768px)">
+                    <img class="site-logo__baseline" src="/assets/img/resiste-carte-03-small.png" alt="">
+                </picture>
+                <picture class="card card--04">
+                    <source srcset="/assets/img/resiste-carte-04.png" media="(min-width: 768px)">
+                    <img class="site-logo__baseline" src="/assets/img/resiste-carte-04-small.png" alt="">
+                </picture>
+                <picture class="card card--05">
+                    <source srcset="/assets/img/resiste-carte-05.png" media="(min-width: 768px)">
+                    <img class="site-logo__baseline" src="/assets/img/resiste-carte-05-small.png" alt="">
+                </picture>
+                <picture class="card card--06">
+                    <source srcset="/assets/img/resiste-carte-06.png" media="(min-width: 768px)">
+                    <img class="site-logo__baseline" src="/assets/img/resiste-carte-06-small.png" alt="">
+                </picture>
+            </div>
         </div>
-        <div class="cols-2__col section-about__video">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XT8K7vgxrpo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="cols-2__col text-justify">
+            <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, relevez des épreuves et rassemblez les 4 pièces d’un puzzle. Une fois le puzzle complété, vous pourrez lancer la mise à jour et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde… Technomania tente lui aussi d’installer un virus pour vous empêcher d’agir. Il vous faudra donc réussir votre mission avant le chargement complet de ce virus&nbsp;!</p>
+            <p>Après le succès de sa première version, le jeu <em>Résiste&nbsp;!</em> revient dans un nouveau modèle, encore plus amusant : emmenez vos élèves dans une activité motivante et instructive sur le thème de la démocratie et ses valeurs. Il vous permet d’aborder des concepts importants comme la démocratie, la résistance, les demandes d’asile, les institutions belges, le droit de grève, le droit de vote, etc., tout en passant un moment agréable en groupe.</p>
         </div>
     </div>
 </section>
