--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,9 +21,11 @@ $mw: 1280px; // max-width
 @import 'partials/_mixins';
 @import 'partials/_layout';
 @import 'partials/_typo';
-@import 'partials/_hero';
-@import 'partials/_description';
-@import 'partials/_about';
-@import 'partials/_technical';
-@import 'partials/_footer';
 @import 'partials/_modules';
+@import 'partials/_hero';
+@import 'partials/_intro';
+@import 'partials/_get-it';
+@import 'partials/_you';
+@import 'partials/_about';
+@import 'partials/_infos';
+@import 'partials/_footer';
