--- a/assets/sass/partials/_modules.scss
+++ b/assets/sass/partials/_modules.scss
@@ -9,6 +9,225 @@
     clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
 }
 
+a,
+button {
+    color:$red;
+    text-decoration-style:dashed;
+    
+    &:hover, &:focus {
+        text-decoration:none;
+    }
+}
+
+button {
+    padding:0.25em 0;
+    border:none;
+    background:none;
+    text-decoration: underline;
+    text-decoration-style:dashed;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.button {
+    display:inline-block;
+    padding:0.5em 1em;
+    background: $red;
+    border:3px dashed $white;
+    font-size:1.2rem;
+    color:$white;
+    text-decoration:none;
+    @include ff-b;
+    text-align: center;
+    transition:background-color 200ms ease-out;
+
+    &:hover, &:focus {
+        background-color: $bleu-tm;
+    }
+}
+
 iframe {
-    max-width: 100%;
+
+    &.button {
+        padding:0;
+    }
+}
+
+hr {
+    display:block;
+    width: 40%;
+    max-width:240px;
+    margin:$su*2 auto;
+    padding:0 $su*4;
+    border:1px dashed $bleu-tm;
+
+    @media screen and (min-width:768px) {
+        margin:$su*4 auto;
+    }
+}
+
+mark {
+    color:$bleu-tm;
+    background:none;
+}
+
+.icon-list {
+    padding:0;
+    margin:0;
+
+    @media screen and (min-width:768px) {
+        display:flex;
+        width:100%;
+        justify-content:space-around;
+    }
+
+    li {
+        display:flex;
+        align-items:center;
+        margin:$su/2 0;
+
+        &.icon-list__long-text {
+            padding-right: 0.5em;
+
+            span {
+                max-width: 18em;
+            }
+        }
+
+        &:hover, &:focus {
+            
+            svg {
+                transform:scale(1.1);
+            } 
+        }
+    }
+
+    svg {
+        height:4em;
+        min-width:4em;
+        margin-right:0.75em;
+        transition: transform 100ms ease-out;
+
+        @media screen and (min-width:400px) {
+            height:5em;
+            min-width:5em;
+        }
+
+        @media screen and (min-width:1024px) {
+            height:7em;
+            min-width:7em;
+        }
+    }
+
+    span {
+        display:block;
+    }
+
+    span, a {
+        font-size:1.2rem;
+        line-height:1.25;
+    }
+
+    small a {
+        font-size:100%;
+    }
+}
+
+
+// MODAL 
+.invisible {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+  
+.hidden {
+    display: none;
+}
+  
+/* removes scroll when modal is opened */
+.no-scroll {
+    overflow: hidden;
+}
+/* overlay covers everything */
+#js-modal-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: white;
+    opacity: .9;
+    z-index: 5;
+    cursor: pointer;
+}
+#js-modal-overlay[data-background-click="disabled"] {
+    cursor: auto;
+}
+
+#js-modal-overlay {
+    animation: fadewhite ease .200ms forwards;
+}
+
+@keyframes fadewhite {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: .9;
+    }
+}
+
+#js-modal {
+    position: fixed;
+    top: 50% !important;
+    right: auto !important;
+    left: 50% !important;
+    width: 80% !important;
+    max-width: 640px !important;
+    max-height: 90vh !important;
+    padding: 1em;
+    border: 3px dashed $bleu-tm;
+    background: #fff;
+    overflow: visible;
+    z-index: 10;
+    transform: scale(0) translate(-50%,-50%);
+    transform-origin: center !important;
+    animation: pop ease-out 200ms forwards;
+}
+
+#js-modal-close {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    padding: .25em .5em;
+    border: 3px dashed$bleu-tm;
+    background: white;
+    color:$bleu-tm;
+    cursor: pointer;
+    transition:color 150ms ease-out, border-color 150ms ease-out;
+
+    &:hover,
+    &:focus {
+        border-color:$red;
+        color:$red;
+    }
+}
+
+@keyframes pop {
+    0% {
+        opacity: 0;
+        transform: scale(0) translate(-50%,-50%);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1) translate(-50%,-50%);
+    }
 }
