--- a/layouts/partials/section-infos.html
+++ b/layouts/partials/section-infos.html
@@ -1,19 +1,10 @@
-<section id="section-infos" class="observed" aria-label="Éléments du jeu">
-    <div id="get-the-game">
-        <h2>Procurez-vous le&nbsp;jeu&nbsp;!</h2>
-        <ul class="icon-list">
-            <li>
-                <svg viewBox="0 0 90 90"><use xlink:href="#icone-boutique"></use><title>Boutique en ligne</title></svg>
-                <span><a href="https://boutique.territoires-memoire.be/fr/outils-pedagogiques/57-resiste-.html" target="_blank" rel="noopener">Acheter en ligne</a></span>
-            </li>
-            <li>
-                <svg viewBox="0 0 90 90"><use xlink:href="#icone-contact"></use><title>Contact</title></svg>
-                <span>04 232 70 03<br><a href="mailto:accueil@territoires-memoire.be">Email</a></span>
-            </li>
-            <li class="icon-list__long-text">
-                <svg viewBox="0 0 90 90"><use xlink:href="#icone-localisation"></use><title>Où trouver le jeu</title></svg>
-                <span><small>Le jeu est disponible à la vente à la <a href="http://www.citemiroir.be/fr/librairie">librairie Stéphane Hessel</a> de la <a href="http://www.citemiroir.be/fr">Cité&nbsp;Miroir</a>, 22 place Xavier&nbsp;Neujean à 4000&nbsp;Liège</small></span>
-            </li>
-        </ul>
-    </div>
+<section id="section-infos" class="home-section observed" >
+    <p class="text-center">Avec le soutien du Ministère de l’Éducation</p>
+    <ul class="section-infos__soutiens">
+        <li>
+            <a href="http://www.federation-wallonie-bruxelles.be/" target="_blank" rel="noopener">
+                <img loading="lazy" src="/assets/img/logo-federation-wallonie-bruxelles.png" alt="Logo de la Fédération Wallonie-Bruxelles">
+            </a>
+        </li>
+    </ul>
 </section>
