add h1 in header

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -19,6 +19,7 @@
     </div>
     <div class="cols-2__col">
         <h1 class="site-logo">
+            <span class="hide">Résiste ! Le jeu coopératif pour résister ensemble et défendre la démocratie !</span>
             <a href="/">
                 <img class="site-logo__resiste" src="/assets/img/resiste-logo.png" alt="Résiste !">
             </a>
