--- a/layouts/partials/section-you.html
+++ b/layouts/partials/section-you.html
@@ -2,7 +2,7 @@
     <h2>À vous de jouer&nbsp;!</h2>
     <h3><span class="observed">1</span> Installez-le jeu et formez les équipes&nbsp;!</h3>
     <div class="section-you__video">
-        <iframe class="button" loading="lazy" width="560" height="315" src="https://www.youtube-nocookie.com/embed/d2_IQQ1G83k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="button" loading="lazy" width="560" height="315" src="https://www.youtube-nocookie.com/embed/JYGjhDX25-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <hr>
     <h3><span class="observed">2</span> Visionnez le film «&nbsp;Mine de rien&nbsp;!&nbsp;»</h3>
