--- a/layouts/partials/section-get-it.html
+++ b/layouts/partials/section-get-it.html
@@ -31,7 +31,7 @@
             <p>Le jeu est disponible à la vente :</p>
             <ul>
                 <li><mark>→ </mark>à la <a target="_blank" rel="noopener" href="http://www.citemiroir.be/fr/librairie">librairie Stéphane Hessel</a> de la Cité&nbsp;Miroir, place Xavier&nbsp;Neujean, 22 à 4000&nbsp;Liège</li>
-                <li><mark>→ </mark>à la <a target="_blank" rel="noopener" href="https://www.facebook.com/laventure.librairie/">librairie l’aventure</a>, Chemin-Rue, 4 à 4960&nbsp;Malmedy</li>
+                <li><mark>→ </mark>à la <a target="_blank" rel="noopener" href="https://www.facebook.com/laventure.librairie/">librairie L’Aventure</a>, Chemin-Rue, 4 à 4960&nbsp;Malmedy</li>
                 <li><mark>→ </mark>à la <a target="_blank" rel="noopener" href="https://www.long-courrier.com/">librairie Long-Courrier</a>, Avenue Laboulle, 55 à 4130&nbsp;Tilff </li>
                 <li><mark>→ </mark>à la <a target="_blank" rel="noopener" href="https://www.laparenthese.be/">librairie La Parenthèse</a>, Rue des Carmes, 24 à 4000&nbsp;Liège</li>
             </ul>
