--- a/layouts/partials/section-get-it.html
+++ b/layouts/partials/section-get-it.html
@@ -10,7 +10,7 @@
             </li>
             <li>
                 <svg viewBox="0 0 90 90"><use xlink:href="#icone-contact"></use><title>Contact</title></svg>
-                <span>04 232 70 03<br><a href="mailto:accueil@territoires-memoire.be">Email</a></span>
+                <span>04 232 70 06<br><a href="mailto:grf@territoires-memoire.be">Email</a></span>
             </li>
             <li class="icon-list__long-text">
                 <svg viewBox="0 0 90 90"><use xlink:href="#icone-localisation"></use><title>Où trouver le jeu</title></svg>
