--- a/layouts/partials/section-intro.html
+++ b/layouts/partials/section-intro.html
@@ -20,4 +20,11 @@
             <span>30 €</span>
         </li>
     </ul>
+    <h3>Les points forts du jeu</h3>
+    <ul class="section-intro__plus">
+        <li><mark>→ </mark>S’amuser en expérimentant un jeu coopératif de manière&nbsp;solidaire;</li>
+        <li><mark>→ </mark>Allie pédagogie/didactique avec la dynamique ludique de jeux de société «&nbsp;classique&nbsp;»;</li>
+        <li><mark>→ </mark>Permet de découvrir les concepts, principes et valeurs démocratiques à travers un outil&nbsp;engagé;</li>
+        <li><mark>→ </mark>Une vidéo tutoriel sur l’utilisation du jeu est également disponible en&nbsp;ligne.</li>
+    </ul>
 </section>
