--- a/layouts/partials/section-you.html
+++ b/layouts/partials/section-you.html
@@ -1,6 +1,6 @@
 <section id="section-you" class="home-section">
     <h2>À vous de jouer&nbsp;!</h2>
-    <h3><span class="observed">1</span> Installez-le jeu et formez les équipes&nbsp;!</h3>
+    <h3 id="tutoriel"><span class="observed">1</span> Installez-le jeu et formez les équipes&nbsp;!</h3>
     <div class="section-you__video">
         <iframe class="button" loading="lazy" width="560" height="315" src="https://www.youtube-nocookie.com/embed/JYGjhDX25-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
