add title on iframes

--- a/layouts/partials/section-you.html
+++ b/layouts/partials/section-you.html
@@ -2,7 +2,7 @@
     <h2>À vous de jouer&nbsp;!</h2>
     <h3 id="tutoriel"><span class="observed">1</span> Installez-le jeu et formez les équipes&nbsp;!</h3>
     <div class="section-you__video">
-        <iframe class="button" loading="lazy" width="560" height="315" src="https://www.youtube-nocookie.com/embed/JYGjhDX25-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="button" loading="lazy" title="Tutoriel vidéo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/JYGjhDX25-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <hr>
     <h3><span class="observed">2</span> Visionnez le film «&nbsp;Mine de rien&nbsp;!&nbsp;»</h3>
@@ -10,7 +10,7 @@
         <div class="cols-2__col">
             <div class="section-you__television">
                 <div class="section-you__television__video">
-                    <iframe loading="lazy" width="560" height="315" src="https://www.youtube-nocookie.com/embed/XT8K7vgxrpo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe loading="lazy" title="Le film Mine de rien" width="560" height="315" src="https://www.youtube-nocookie.com/embed/XT8K7vgxrpo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="section-you__television__img">
                     <img src="/assets/img/resiste-television.svg" role="presentation">
@@ -31,7 +31,7 @@
     <div class="section-you__btn">
         <a class="button" href="/assets/pdf/tm-resiste-dossier-pedagogique.pdf" target="_blank">
             <figure>
-                <img src="/assets/img/resiste-dossier-pedagogique.jpg" width="330" height="467">
+                <img src="/assets/img/resiste-dossier-pedagogique.jpg" width="330" height="467" alt="Couverture du dossier pédagogique">
                 <figcaption>Télécharger en pdf</figcaption>
             </figure>
         </a>
