--- a/layouts/partials/section-intro.html
+++ b/layouts/partials/section-intro.html
@@ -1,7 +1,7 @@
 <section id="section-intro" class="home-section">
     <h2 class="hide">Introduction</h2>
     <p class="section-intro__text">Avec <em>Résiste&nbsp;!</em>, plongez dans un univers original, répondez à des questions et relevez des défis tout en renforçant vos&nbsp;connaissances&nbsp;! </p>
-    <p class="section-intro__text">Une manière ludique et coopérative d’aborder la politique, la démocratie et la résistance à&nbsp;partir&nbsp;de&nbsp;9&nbsp;ans.</p>
+    <p class="section-intro__text">Une manière ludique et coopérative d’aborder le système politique belge, la démocratie et la résistance à&nbsp;partir&nbsp;de&nbsp;9&nbsp;ans.</p>
     <ul id="section-intro__icons" class="icon-list">
         <li>
             <svg viewBox="0 0 90 90"><use xlink:href="#icone-joueurs"></use><title>Nombre de joueurs</title></svg>
