fix small typo in footer

--- a/layouts/partials/section-infos.html
+++ b/layouts/partials/section-infos.html
@@ -1,5 +1,5 @@
 <section id="section-infos" class="home-section observed" >
-    <p class="text-center">Avec le soutien de la Fédération Wallonie-Bruxelles – Ministère de l’Education et de l’Egalité des Chances</p>
+    <p class="text-center">Avec le soutien de la Fédération Wallonie-Bruxelles – Ministères de l’Education et de l’Egalité des Chances</p>
     <ul class="section-infos__soutiens">
         <li>
             <a href="http://www.federation-wallonie-bruxelles.be/" target="_blank" rel="noopener">
